--- a/reg_lineal_simple.tex
+++ b/reg_lineal_simple.tex
@@ -64,8 +64,7 @@
 \begin{document}
 	\maketitle	
 	
-\section*{Ejemplo de diapositivas\\ 
-	Propelente}
+\section*{Ejemplo}
 
 \begin{center}
 	\begin{table}[htpb] 
